!! -  If you have used a version < 0.8, I recommend to delete the Yatabar.lua and Yatabar.lua.bak in your SavedVariables folder:
 ...World of Warcraft\_classic_\WTF\Account\... search it in the subfolders, the place is maybe different on your computer

- fixed wrong duration for some totems
----------------------
- option to hide totem timer
----------------------
- fixed bug: hidden totems are visible again after relog
----------------------
- fixed bug: timer doesnt start
----------------------
- add minimap icon
- remove timer when player is dead
- bugfix problem with setting orientation 

-----------------------
- show popups on keypress (set up key in config menu)
- add totemtimers
- changes savefile
